# mdc-melanoma-tbdt

./: GIT_WORKFLOW.md  QUICKSTART.md  README.md  TRAINING.md  explore.md  main.py  pyproject.toml  train_baseline.ps1
.github/: copilot-instructions.md
configs/: README.md  aug.yaml  baseline.yaml  baseline_cnn_no_augmentation.yaml  custom_resnet.yaml  pretrained_convnext.yaml  pretrained_efficientnet.yaml  pretrained_effnetv2.yaml  pretrained_resnet.yaml
models/: baseline_cnn_history.json
notebooks/: data-exploring.ipynb  eda.ipynb
scripts/: baseline_train.py  download_data.sh  report.py  test.py  train.py  utils.py
src/: data.py  model.py  train.py  training.py
src/models/: base.py  baseline.py  blocks.py  convnext.py  custom.py  efficientnet.py  effnet_v2.py  resnet.py  utils.py
transforms/: __init__.py  affine.yaml  classic.yaml  color.yaml  combined.yaml  crop.yaml  cutout.yaml  flip.yaml  preprocessing.yaml  rotate.yaml
