[project]
name = "mdc-melanoma-tbdt"
version = "0.1.0"
description = "Final project for Mineração de Dados Complexos course."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "kaggle>=1.8.0",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
mdc-melanoma-tbdt = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "mdc-melanoma-tbdt",
]
